--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rainbow-me/rainbowkit": "2.2.4",
     "@tanstack/react-query": "5.69.0",
     "@vercel/analytics": "1.5.0",
+    "moment": "^2.30.1",
     "next": "15.2.3",
     "next-themes": "0.4.6",
     "react": "19.0.0",
